# UIUC-SE494-Fall-2025---Team-14

./: .gitignore  LICENSE  README.md  robot_calibration.yaml
assets/images/: .gitkeep
src/: buglog.txt  problems.txt  success-code.txt
src/Universal_Robots_ROS2_Driver/ur_moveit_config/launch/: ur_moveit.launch.py
src/Universal_Robots_ROS2_Driver/ur_moveit_config/rviz/: view_robot.rviz
src/Universal_Robots_ROS2_Driver/ur_moveit_config/srdf/: ur_macro.srdf.xacro
src/Universal_Robots_ROS2_Driver/ur_robot_driver/config/: ur_controllers.yaml
src/Universal_Robots_ROS2_Driver/ur_robot_driver/launch/: ur_control2.launch.py
src/path_exp/: package.xml  setup.cfg  setup.py
src/path_exp/config/: my_controllers.yaml
src/path_exp/launch/: start_robot_and_moveit.launch.py
src/path_exp/path_exp/: cad_traj_rings.py  cad_traj_spiral.py  dhdh.txt  spiral_node.py  spiral_real.py  test_gripper.py  traj_ring_completed.py
src/robotiq_hande_description/: CHANGELOG.md
src/robotiq_hande_description/launch/: display.launch.py
src/robotiq_hande_description/urdf/: robotiq_hande_gripper.urdf.xacro  robotiq_hande_gripper.xacro  robotiq_hande_gripper_mod.urdf.xacro
src/robotiq_hande_driver/: CITATION.cff  README.md
src/robotiq_hande_driver/robotiq_hande_driver/: CHANGELOG.md  CMakeLists.txt  package.xml  robotiq_hande_driver.repos
src/ur_description/: CMakeLists.txt  local_setup.sh
src/ur_description/cmake/: ur_descriptionConfig.cmake
src/ur_description/urdf/: my_tool.xacro  ur.urdf.xacro
src/ur_description/urdf/inc/: robotiq_hande_macro.xacro
(+12 files in other folders)
